# onepiece

./: README.md  Taskfile.yaml  buf.work.yaml  buf.yaml  go.mod  go.sum
go/: go.mod  go.sum
go/onepiece/eventsourcing/: eventsourcing.go
go/onepiece/eventsourcing/onepiecemessage/: message.go  message_test.go
go/onepiece/protobuf/: onepieceproto.go
onepiece/: errors.go  eventsourcing.go
onepiece/cmd/nats/: main.go
onepiece/eventsourcing/: eventsourcing.go
onepiece/eventsourcing/onepiecetesting/: testing.go
onepiece/onepiecetesting/: testing.go  testingfile.go
proto/: buf.yaml
proto/straw-hat-llc/onepiece/: extensions.proto
rustlang/: Cargo.toml
rustlang/crates/infra/: Cargo.toml
rustlang/crates/infra/src/: decider.rs  eventsourcing.rs  testing.rs
rustlang/crates/monitoring-wasm/src/: lib.rs
rustlang/crates/monitoring/src/: lib.rs
rustlang/crates/runtime/: Cargo.toml
rustlang/crates/runtime/src/: lib.rs  main.rs
tests/integrations/app/: main.go
tests/integrations/append/: main.go
tests/integrations/filetesting/: command.json  plandomain_test.go
tests/integrations/plandomain/: Taskfile.yaml  buf.gen.yaml  buf.yaml  plan.pb.go  plan.proto  plandomain.go  plandomain_test.go
tests/integrations/planinfra/: infra.go  planactor.go
unstable/golang/: go.mod  go.sum  shared.go
unstable/golang/plandomain/: Makefile  buf.yaml
unstable/golang/planinfra/: infra.go
unstable/rustlang/: Cargo.toml  Makefile
unstable/rustlang/crates/monitoring-wasm/: Cargo.toml  Makefile
unstable/rustlang/crates/monitoring-wasm/src/: lib.rs
(+35 files in other folders)
