[package]
name = "monitoring-wasm"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z" # Optimize for size
lto = true # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
strip = "symbols" # Strip debug symbols to reduce size

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.0.0"
monitoring = { path = "../monitoring" }
getrandom = { version = "0.2.12", features = ["js"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" , features = [] }
anyhow = "1.0.79"
